src/test/contracts/negative/pattern_matching_anomalies/redundant_case/w_rx_ry.mligo
type p = One | Two

type t = { a : int ; b : p }

let s (x : t) = 
  match x with
    _               -> ()
  | { a ; b = One } -> ()
  | { a ; b = Two } -> ()